--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-lliurex-artwork-fonts (1.1.0+nmu1) bionic; urgency=medium
+lliurex-artwork-fonts (1.1.0) bionic; urgency=medium
 
   * Adapted to bionic
 
