--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork-fonts (1.3) focal; urgency=medium
+
+  * First focal release
+
+ -- Juanma1980 <juanma1980@gmail.com>  Tue, 01 Jun 2021 20:02:16 +0200
+
 lliurex-artwork-fonts (1.2) bionic; urgency=medium
 
   * Merge classroom and default packages
