--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork-fonts (1.4) jammy; urgency=medium
+
+  * First version to jammy 
+
+ -- Daniel Duran <daduve@gmail.com>  Fri, 22 Sep 2023 10:16:21 +0200
+
 lliurex-artwork-fonts (1.3) jammy; urgency=medium
 
   * First focal release
